Fixed an issue with y overflow

--- a/css/landing.scss
+++ b/css/landing.scss
@@ -143,6 +143,7 @@ body {
 
 
   @media (min-width: 768px) {
+    overflow-x: visible;
     height: 40%;
   }
 
